# maina-player-skill-stats

./: .gitignore  .gitmodules  README.md  a.json  api_util.py  calc.py  download.py  inabakumori - SATURDAY SUNSET (Foxide) [HD].osu  main.py  temp.json
beatmapsets/: 1751746 Kaneko Chiharu - Yuki Otoko.osz  1968286 BEMANI Sound Team HuMeR feat Fernweh - Sakazuki.osz
calc-client/: client.py  client_config.py
calc-server/: CMakeLists.txt  server.cpp  server.hpp  socket_util.c  socket_util.h
rosu-pattern-detector-python/: Cargo.toml  pyproject.toml
rosu-pattern-detector-python/src/: lib.rs
