[package]
name = "rosu-pattern-detector-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rosu_pattern_detector_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
rosu-map = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
eyre = "0.6.12"
rosu-pattern-detector = { path = "../rosu-pattern-detector" }
